# dioxus-openai-qa-gui

./: .gitignore  Cargo.toml  build.rs  readme.md  system_prompts.json
src/: icon.rs  main.rs
