[package]
name = "dioxus-openai-qa-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
markdown = "0.3.0"
reqwest = "0.11.14"
serde = "1.0.154"
serde_json = "1.0.94"
tokio = "1.26.0"
